<resources>
    <string name="app_name">F.Money</string>
    <string name="action_settings">设置</string>
    <string name="exit_qr">再按一次退出F.Money</string>
    <string name="sync">同步</string>
    <string name="open_sync">开启同步服务器</string>
    <string name="more">更多</string>
    <string name="sett_h1">偏好</string>
    <string name="sett_h2">基础数据</string>
    <string name="sett_tag">标签管理</string>
    <string name="sett_tag_sub">设置收入支出的标签</string>
    <string name="sett_zhichu_color">收入显示为红色</string>
    <string name="sett_zhichu_color_sub">当前为绿色</string>
    <string name="sett_zhichu_color_sub2">当前为红色</string>
    <string name="input_sum">余额</string>
    <string name="input_desc">请输入备注</string>
    <string name="add_liushui">新增流水</string>
    <string name="sett_color_primary">主题色</string>
    <string name="sett_color_primary_sub">应用程序的主色</string>
    <string name="sett_color_primary_desc">选择主题颜色</string>
    <string name="sett_color_accent_title">强调色</string>
    <string name="sett_color_accent_sub">选择强调色（如浮动按钮颜色）</string>
    <string name="sett_color_accent_desc">选择强调色</string>
    <string name="back">返回</string>
    <string name="custom">自定义</string>
    <string name="done">确定</string>
    <string name="presets">预设</string>
    <string name="cancel">取消</string>
    <string name="sett_color_accent">强调色</string>
    <string name="tag_zc">支出标签</string>
    <string name="tag_sr">收入标签</string>
    <string name="add_cate_input">请输入标签名称</string>
    <string name="save">保存</string>
    <string name="cate_is_exist">存在同名标签！</string>
    <string name="input_is_null">不能为空！</string>
    <string name="edit_success">修改成功！</string>
    <string name="add_success">添加成功！</string>
    <string name="edit">修改</string>
    <string name="del_cate">删除标签</string>
    <string name="del_cate_qr">你确定要删除标签吗？</string>
    <string name="del_cate_qr2">有 {0} 条流水使用了这个标签，删除标签将同时删除对应的流水。\n你确定要删除标签吗？</string>
    <string name="commit">确认</string>
    <string name="del_success">删除成功！</string>
    <string name="menu_count">总览</string>
    <string name="menu_liushui">流水</string>
    <string name="menu_account">账户</string>
    <string name="add_account">添加账户</string>
    <string name="account_name">账户名称</string>
    <string name="action_sum">余额</string>
    <string name="account_is_exist">账户名已经存在！</string>
    <string name="account_total">支出 {0} 笔，收入 {1} 笔</string>
    <string name="account_sum">余额</string>
    <string name="total_sum">总资产：</string>
    <string name="account_details">账户详情</string>
    <string name="pull_down_to_refresh">下拉加载 {0} 年数据</string>
    <string name="release_down_to_refresh">松开加载 {0} 年数据</string>
    <string name="refresh_down_start">正在加载 {0} 年数据</string>
    <string name="refresh_down_end">成功加载 {0} 年数据</string>
    <string name="pull_up_to_refresh">上拉加载 {0} 年数据</string>
    <string name="release_up_to_refresh">松开加载 {0} 年数据</string>
    <string name="refresh_up_start">正在加载 {0} 年数据</string>
    <string name="refresh_up_end">成功加载 {0} 年数据</string>
    <string name="jieyu">结余</string>
    <string name="shouru">收入</string>
    <string name="zhichu">支出</string>
    <string name="bi">笔</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="input_sum_liushui">金额</string>
    <string name="account_details_header">最近1个月的流水</string>
    <string name="data_empty">暂无数据</string>
    <string name="sum_change">余额变更</string>
    <string name="del_account">删除账户</string>
    <string name="del_account_con">删除账户将同时删除账户下的所有流水信息。\n你确定要删除此账户吗？</string>
    <string name="zhuanzhang">转账</string>
    <string name="save_success">保存成功！</string>
    <string name="select_account">选择账户</string>
    <string name="select_tag">选择标签</string>
    <string name="err_no_cate">增加流水前请先添加标签！</string>
    <string name="err_no_account">添加流水前请先添加账户！</string>
    <string name="zhuanchudao">转出到：</string>
    <string name="zhuanruzi">转入自：</string>
    <string name="err_eq_account">转出账户和转入账户不能相同！</string>
    <string name="err_sum_empty">金额不能为空或为0！</string>
    <string name="edit_liushui">编辑流水</string>
    <string name="del_liushui">删除流水</string>
    <string name="del_liushui_con">你确定要删除这条记录吗？\n删除后的数据将不能恢复。</string>
    <string name="desc_sum_change">\n\n此记录是系统自动生成，不能修改，但是可以删除。</string>
    <string name="search_account">搜索账户</string>
    <string name="search_tag">搜索标签</string>
    <string name="search">搜索</string>
    <string name="menu_jiedai">借贷</string>
    <string name="member">借贷人</string>
    <string name="jieru">借入</string>
    <string name="jiechu">借出</string>
    <string name="shouzhai">收债</string>
    <string name="huanzhai">还债</string>
    <string name="add_member">添加借贷人</string>
    <string name="jiedairen">借贷人名称</string>
    <string name="jiedairen_tip">建议填写人名、借贷单位或借贷事由。如张三、**银行或房贷等。</string>
    <string name="add">增加</string>
    <string name="select_member">选择借贷人</string>
    <string name="zongqiankuan">总欠款</string>
    <string name="jieqing">已结清</string>
    <string name="yinghuan">应还</string>
    <string name="yingshou">应收</string>
    <string name="del_member">删除借贷人</string>
    <string name="del_member_con">你确定要删除借贷人吗？\n删除后的数据将不能恢复！</string>
    <string name="err_no_member">添加流水前请先添加借贷人！</string>
    <string name="share">分享</string>
    <string name="juanzeng">捐赠</string>
    <string name="juanzeng_con">\u3000\u3000如果你觉得这个APP对你有帮助，并且你希望她能越来越好，
        你可以通过捐赠作者以支持她更好的发展下去。点击上方“捐赠”。</string>
    <string name="share_con">\u3000\u3000如果你觉得这个APP不错，你可以分享给你的朋友，让他们和你一起享受记账的乐趣。点击上方“分享”。</string>
    <string name="welcom_head_01">轻松开始</string>
    <string name="welcom_content_01">简洁美观的界面，刚刚够用的功能，让你从现在开始享受记账。</string>
    <string name="welcom_head_02">丰富的报表</string>
    <string name="welcom_content_02">直观的图形报表，随时掌握账户变动曲线，跟踪钱款去向。</string>
    <string name="welcom_head_03">充分定制</string>
    <string name="welcom_content_03">使用习惯有差异，审美不一样，没关系，自由定制你喜欢的配色方案。</string>
    <string name="welcom_head_04">安全第一</string>
    <string name="welcom_content_04">不申请无关权限，不收集任何用户数据，保障用户隐私安全。</string>
    <string name="skip">跳过</string>
    <string name="wancheng">完成</string>
    <string name="copyed">支付宝账号 ccqiuqiu@vip.qq.com 已复制</string>
    <string name="share_from">选择分享方式</string>
    <string name="about">关于</string>
    <string name="version">版本号</string>
    <string name="auth_email">作者：ccxiong(95353088@qq.com)</string>
    <string name="dev_show">开发者选项已开启</string>
    <string name="sett_share_show">开启局域网同步</string>
    <string name="sett_share_close">登录/注册</string>
    <string name="dev_hide">开发者选项已关闭</string>
    <string name="tip">提示</string>
    <string name="show_welcome">显示欢迎页面</string>
    <string name="ip">服务器IP地址：</string>
    <string name="input_ip">输入同步服务器IP</string>
    <string name="sync_lianjie_success">已连接到服务器。</string>
    <string name="change_ip">修改</string>
    <string name="sync_start">开始同步</string>
    <string name="jingzichan">净资产</string>
    <string name="share_to">推荐一个记账的软件给你，相当好用。
        下载地址：http://www.wandoujia.com/apps/com.ccqiuqiu.fmoney</string>
    <string name="zongzichan">总资产</string>
    <string name="fuzhai">负债</string>
    <string name="week">本周</string>
    <string name="title_zhichu">支出报表</string>
    <string name="title_zhichu_cate">本月支出(标签)</string>
    <string name="title_zhichu_account">本月支出比例</string>
    <string name="title_zhichu_cate_pie">本月支出比例</string>
    <string name="pie_cate">按标签</string>
    <string name="pie_account">按账户</string>
    <string name="close">关闭</string>
    <string name="baifenbi">比例</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="exit">退出</string>
    <string name="login_email">请输入您的邮箱</string>
    <string name="login_password">请输入登录密码</string>
    <string name="err_mail">Email格式不正确！</string>
    <string name="err_user_exist">用户已存在！</string>
    <string name="err_reg">注册失败！</string>
    <string name="err_pwd">密码不能为空！</string>
    <string name="login_password2">重复上面的密码</string>
    <string name="err_pwd_ne">2次输入的密码不一致！</string>
    <string name="login_success">登录成功</string>
    <string name="reg_success">注册成功。</string>
    <string name="logout_success">已退出登录</string>
    <string name="err_login_incorrect">用户名或密码不正确！</string>
    <string name="err_login">登录失败！</string>
    <string name="un_login">未登录</string>
    <string name="del_data">清空数据</string>
    <string name="err_net">连接超时，请检查网络。</string>
    <string name="err_sync">同步失败！</string>
    <string name="logout">注销</string>
    <string name="un_sync">还没有同步过</string>
    <string name="last_sync_time">最后同步时间</string>
    <string name="juanzeng_sum">输入捐赠金额</string>
    <string name="zengfu_tip">注：收款方为第三方支付服务商。\n如有疑问，请联系作者(QQ:95353088)</string>
    <string name="zhifu_title">捐赠F.Money</string>
    <string name="zhifu_desc">捐赠F.Money</string>
    <string name="err_pay_no">不能初始化支付，可能是当前手机不支持。</string>
    <string name="juanzeng_success">捐赠成功，感谢你的支持。</string>
    <string name="err_juanzeng">捐赠失败！</string>
    <string name="err_juanzeng_weixin_uninstall">微信客户端未安装！</string>
    <string name="err_juanzeng_weixin_buzhic">微信客户端版本不支持微信支付！</string>
    <string name="err_juanzeng_zhifubao_cannel">取消支付！</string>
    <string name="err_uninstall_plus">未安装支付插件,无法进行微信支付。</string>
    <string name="install">安装</string>
    <string name="paying_zhifubao">启动支付宝支付中...</string>
    <string name="paying_weixin">启动微信支付中...</string>
    <string name="juanzeng_name">输入你的名字(做好事也要留名哦~)</string>
    <string name="juanzeng_list">捐赠者名单</string>
    <string name="name_null">匿名</string>
    <string name="err_load_data">获取数据失败！</string>
    <string name="permission_msg_read_phone_state">此功能需要申请需要的权限。
        \n请在接下来的询问框中选择“允许”。否则此功能将不可用。</string>
    <string name="permission">权限申请</string>
    <string name="zhidaol">知道了</string>
    <string name="permission_no">获取权限失败！</string>
    <string name="account_null">没有账户</string>
    <string name="cate_null">没有标签</string>
    <string name="sync_auto">自动同步中...</string>
    <string name="sync_success">同步完成！</string>
    <string name="sett_auto_sync">自动同步</string>
    <string name="sett_auto_sync_conn">退出软件时同步数据（仅WiFi）</string>
</resources>
