<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/moreLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:elevation="6dp"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/more_toolbar"
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu_90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="@dimen/guillotine_item_text_size" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rey.material.widget.Button
                style="@style/LightFlatWaveButtonRippleStyle"
                android:singleLine="true"
                android:textAllCaps="false"
                android:id="@+id/btn_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sync"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/sync"
                android:textColor="@color/white" />
            <LinearLayout
                android:id="@+id/sync_unlogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="visible">
                <com.rey.material.widget.Button
                    style="@style/LightFlatWaveButtonRippleStyle"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:id="@+id/btn_sync_login"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_background_hong"
                    android:text="@string/login"
                    android:textColor="@color/white" />
                <com.rey.material.widget.Button
                    style="@style/LightFlatWaveButtonRippleStyle"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:id="@+id/btn_sync_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/btn_background_t"
                    android:text="@string/reg"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sync_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.dd.CircularProgressButton
                    android:id="@+id/btn_sync_start"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:cpb_colorIndicator="#FF9800"
                    app:cpb_cornerRadius="2dp"
                    app:cpb_selectorComplete="@drawable/btn_complete_state_selector"
                    app:cpb_selectorError="@drawable/btn_error_state_selector"
                    app:cpb_selectorIdle="@drawable/btn_idle_state_selector"
                    app:cpb_textComplete="同步成功！"
                    app:cpb_textError="同步失败，重试"
                    app:cpb_textIdle="立即同步" />

                <com.rey.material.widget.Button
                    style="@style/LightFlatWaveButtonRippleStyle"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:id="@+id/btn_sync_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_background_t"
                    android:text="@string/logout"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white" />

            </LinearLayout>
            <TextView
                android:id="@+id/login_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/text_color_bai"
                android:gravity="right"
                android:layout_marginRight="16dp"
                android:text="@string/un_sync"/>

            <com.rey.material.widget.Button
                style="@style/LightFlatWaveButtonRippleStyle"
                android:singleLine="true"
                android:textAllCaps="false"
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/share"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/share_con"
                android:textColor="@color/white" />

            <com.rey.material.widget.Button
                style="@style/LightFlatWaveButtonRippleStyle"
                android:singleLine="true"
                android:textAllCaps="false"
                android:id="@+id/btn_juanzeng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_card_giftcard"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/juanzeng"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/juanzeng_con"
                android:textColor="@color/white" />
            <com.rey.material.widget.Button
                style="@style/LightFlatWaveButtonRippleStyle"
                android:singleLine="true"
                android:textAllCaps="false"
                android:id="@+id/btn_juanzeng_list"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:text="@string/juanzeng_list"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white" />

            <com.rey.material.widget.Button
                style="@style/LightFlatWaveButtonRippleStyle"
                android:singleLine="true"
                android:textAllCaps="false"
                android:id="@+id/btn_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_settings"
                android:drawablePadding="10dp"
                android:gravity="left|center_vertical"
                android:padding="10dp"
                android:text="@string/action_settings"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>